# overlay_bug_reproduction

./: README.md
overlay/src/package_a/: CMakeLists.txt
overlay/src/package_a/include/package_a/: package_a.hpp
overlay/src/package_a/src/: package_a.cpp
overlay/src/package_c/: CMakeLists.txt  package.xml
overlay/src/package_c/include/package_c/: package_c.hpp
overlay/src/package_c/src/: package_c.cpp
overlay/src/package_d/: CMakeLists.txt  package.xml
overlay/src/package_d/src/: package_d.cpp
underlay/src/package_a/: package.xml
underlay/src/package_b/: CMakeLists.txt  package.xml
